# IMU-3D-position-tracking

./: Cargo.toml
src/: filter.rs  imu.rs  main.rs  pose3d.rs
