[package]
name = "Imu-3D-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-buffer = "0.5.0"
nalgebra = "0.33.0"
plotters = "0.3.6"
serde = "1.0.204"
serialport = "4.4.0"
hex = "0.4.3"
three-d = "0.17.0"
cgmath = "0.18.0"
rerun = "0.17.0"
